Fixed a couple of minor issues with the HTML, corrected left-hand menu alignment in a slightly hacky way.

--- a/src/css/purp.css
+++ b/src/css/purp.css
@@ -1,44 +1,32 @@
-body, html {
-    background-color: #f6eaea;
-}
-
-h1 {
-    font-size: 1.5em;
-    color: #B26AAB;
-    text-transform: uppercase;
-    text-align: center;
-}
-
-h2 {
-    font-size: 1em;
-    text-align: center;
-    color: #C19BC0;
+#contact {
+    list-style-type: none;
     padding: 0;
-    margin 0;
+}
+
+#contact li {
+    margin-top: .5em;
+}
+
+#contact li a {
+    color: #B26AAB;
 }
 
 #logo {
-    text-align: center;
     margin-top: 4em;
+    text-align: center;
 }
 
 #main {
     margin-top: 4em;
 }
 
-img {
-    max-width: 100%;
-}
-
-p {
-    margin-top: 2em;
-}
-
 #menu {
     list-style-type: none;
     margin-top: 3em;
+    max-width: 305px;
+    margin-left: auto;
+    margin-right: auto;
 }
-
 
 #menu li {
     margin-top: 1em;
@@ -53,22 +41,33 @@ p {
     color: #17967D;
 }
 
-#contact {
-    list-style-type: none;
-    padding: 0;
-}
-
-#contact li {
-    margin-top: 0.5em;
-
-    
-}
-
-#contact li a {
-    color: #B26AAB;
-}
-
 .work {
-margin-top: 0.5em;
-margin-bottom: 0.5em
+    margin-bottom: .5em;
+    margin-top: .5em;
+}
+
+body,html {
+    background-color: #f6eaea;
+}
+
+h1 {
+    color: #B26AAB;
+    font-size: 1.5em;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+h2 {
+    color: #C19BC0;
+    font-size: 1em;
+    padding: 0;
+    text-align: center;
+}
+
+img {
+    max-width: 100%;
+}
+
+p {
+    margin-top: 2em;
 }
